# 2ndDisplay

./: .gitignore  AndroidDiscoveryTest.cs  BUILD_INSTRUCTIONS.md  DEBUG_TRACKING.md  README.md  READY_FOR_TESTING.md  test_android_detection.ps1  test_connectivity.cpp  test_network.ps1  trigger_connect.cpp
.claude/: settings.local.json
android/: CHANGELOG.md  README.md  gradle.properties  local.properties  protocol.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/secondscreen/: Decoder.kt  DiscoveryService.kt  MainActivity.kt  PacketAssembler.kt  SettingsActivity.kt  SettingsFragment.kt  TouchSender.kt  VideoReceiverService.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: preferences.xml
doc/: android_app_analysis.md  build_success.md  connection_issue_analysis.md  crash_fix_summary.md  deadlock_fix_summary.md  discovery_fix_summary.md  enhanced_host_implementation.md  fix_implementation_summary.md  h264_encoding_implementation.md  host_cpp_analysis.md  simplified_test_version.md  video_streaming_implementation.md
host/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  brief-protocol.md  build-instructions.md  build.md  generate_winrt_headers.ps1  install_proper_windows_app_sdk.ps1  install_windows_app_sdk.ps1  packages.config  restore_packages.bat
host/cmake/: CPM.cmake  TabDisplay-config.cmake.in
host/include/: CaptureDXGI.hpp  EncoderAMF.hpp  EncoderSoftware.hpp  InputInjector.hpp  Packet.hpp  Settings.hpp  UdpSender.hpp  UsbDeviceDiscovery.hpp  Version.hpp
host/resources/: icon.txt
host/src/: CaptureDXGI.cpp  EncoderAMF.cpp  EncoderSoftware.cpp  InputInjector.cpp  Settings.cpp  TrayApp.xaml.cpp  TrayApp_basic.cpp  TrayApp_stub.cpp  TrayApp_win32.cpp  UdpSender.cpp  UsbDeviceDiscovery.cpp  main.cpp
testing_files/: DEBUG_TRACKING.md  check_monitor_setup.ps1  check_tray.ps1  compile_direct_connector.ps1  comprehensive_debug.ps1  debug_discovery.cpp  direct_android_test.ps1  direct_connection_manager.ps1  direct_connection_test.cpp  direct_connector.cpp  second_monitor_config.cpp  setup_extended_desktop.py  simple_test.cpp  test_control_packet.ps1  test_correct_header.ps1  test_direct_connection.ps1  test_discovery.cpp  test_extended_desktop_functionality.ps1  test_keyword_matching.ps1  test_proper_control_packet.ps1  test_second_monitor.ps1  test_simple_connectivity.ps1  test_system.py  test_tabdisplay_status.ps1  test_updated_connection.ps1
